fixed overflow preventing script completion to display correctly

--- a/bin/cdb.less
+++ b/bin/cdb.less
@@ -75,7 +75,7 @@
 			overflow : hidden;
 		}
 
-		tr.props td {
+		tr.props td, tr.code td {
 			overflow : visible; // for flags dropdown
 		}
 
